--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 * {
 margin: 0;
@@ -314,4 +315,54 @@ header .nav-links li:last-child {
   .footer-container{
   color: var(--primary-text-color);
 
+}
+
+.Icons {
+  padding: 30px;
+  font-size: 40px;
+  width: 60px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Add a hover effect if you want */
+.Icons:hover {
+  opacity: 1.0;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  color: black;
+  
+  
+}
+
+/* Twitter */
+.fa-twitter {
+  color: black;
+
+ 
+}
+
+.fa-instagram{
+color: black;
+}
+
+.fa-facebook:hover{
+  color: white;
+  transform: translate(-2px);
+}
+
+.fa-instagram:hover{
+  color: white;
+  transform: translate(-2px);
+}
+
+.fa-twitter:hover{
+  color: white;
+  transform: translate(-2px);
 }
