--- a/src/App.css
+++ b/src/App.css
@@ -366,3 +366,56 @@ color: black;
   color: white;
   transform: translate(-2px);
 }
+
+App {
+  text-align: center;
+  background-color:
+  black;
+  }
+  
+  .label{
+  display: block;
+  font-size: larger;
+  color: white;
+  padding: 5px;
+  }
+  
+  .input{
+  font-size: larger;
+  padding: 5px;
+  margin: 2px;
+  
+  }
+  .btn{
+  color: black;
+  border-radius: 5px;
+  font-size: larger;
+  display: block;
+  padding: 5px;
+  margin: 10px auto;
+  
+  }
+  
+  .messages{
+  display: flex;
+  justify-content: center;
+  }
+  
+  .error{
+  display: block;
+  background-color: black;
+  color: white;
+  width: fit-content;
+  height: 50px;
+  padding: 50px;
+  }
+  
+  .success{
+  display: block;
+  background-color: black;
+  color: white;
+  width: fit-content;
+  height: 50px;
+  padding: 5px;
+  }
+  
