--- a/src/App.css
+++ b/src/App.css
@@ -318,7 +318,8 @@ header .nav-links li:last-child {
  /* background-color: red; */
  display: flex;
  justify-content: center;
- padding-top: 180px;
+ padding-top: 200px;
+ 
  text-align: center;
  
  
@@ -331,6 +332,7 @@ header .nav-links li:last-child {
   flex-direction: column;
   margin-bottom: 20px;
   
+ 
 }
 .Icons {
   /* padding: 30px; */
@@ -341,15 +343,17 @@ header .nav-links li:last-child {
   justify-content: space-evenly;
   align-items: center;
   
-  
-   
+
 }
+
+
 
 .child{
   position: absolute;
   background-color: transparent;
   width: 100%;
   border-radius: 10px;  
+  margin-top: auto;
 }
 /* Add a hover effect if you want */
 .Icons:hover {
@@ -455,7 +459,7 @@ cursor: pointer;
   } */
 
   .form{
-    padding-top: 15px;
+    padding-top: 55px;
     width: 100%;
     justify-content: center;
     text-align: center;
